fixed  issue of double letters not showing/ added link to background img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("http://thechronicleherald.ca/sites/default/files/Tie%20Dye_1.jpg?1409833421");
+    background-image: url("../images/Tie-Dye.jpg");
 }
 
 
